fixed height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  @apply h-full;
+}
+
 body {
-  @apply bg-primary-bg-light w-full h-full select-none;
+  @apply bg-primary h-full w-full;
+}
+
+#root {
+  @apply h-full;
 }
 
 @media (prefers-color-scheme: dark) {
